# project-kappa

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: basic.shader
cmake/: FindGLEW.cmake  FindSDL2.cmake
dependencies/GLEW/doc/: basic.html
dependencies/SDL2/docs/: doxyfile
dependencies/SDL2/include/: SDL_atomic.h  SDL_config.h.in  SDL_haptic.h  SDL_opengles2_gl2.h  SDL_stdinc.h  SDL_test_harness.h  SDL_test_images.h
src/: CMakeLists.txt  error.cpp  error.h  game.cpp  game.h  index_buffer.cpp  index_buffer.h  logger.cpp  logger.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.cpp  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/engine/: BatchRenderer.cpp  BatchRenderer.hpp  CMakeLists.txt  DefaultTypes.hpp  Game.cpp  Game.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  SceneMenu.cpp  SceneMenu.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  batch_renderer.cpp  batch_renderer.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  debug.cpp  debug.h  event.cpp  event.h  index_buffer.cpp  index_buffer.h  logger.cpp  logger.h  renderer.cpp  renderer.h  (+11 more)
src/scenes/: CMakeLists.txt  ColorScene.cpp  ColorScene.hpp  scene.h  scene_astronomy.cpp  scene_astronomy.h  scene_batch_rendering.cpp  scene_batch_rendering.h  scene_clear_color.cpp  scene_clear_color.h  scene_menu.cpp  scene_menu.h  scene_texture_2d.cpp  scene_texture_2d.h
